FIX: debugger flags not working on ts files

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -9,6 +9,7 @@
       "forceConsistentCasingInFileNames": true,
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
+      "sourceMap": true
 
     },
     "include": ["src/**/*.ts", "./environment.d.ts"],
