--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "template-discord-colyseus-phaser",
-  "version": "0.0.1",
+  "name": "explosion-gyio-client",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
